# FinAlly-

.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: reviewer.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/market/: __init__.py  cache.py  factory.py  interface.py  massive_client.py  models.py  simulator.py
backend/app/routes/: stream.py
backend/tests/: __init__.py
backend/tests/market/: __init__.py  test_cache.py  test_factory.py  test_massive_client.py  test_models.py  test_simulator.py
indepdendent-reviewer/hooks/: hooks.json
independent-reviewer/.claude-plugin/: plugin.json
planning/: MARKET_DATA_DESIGN.md  MARKET_INTERFACE.md  MARKET_SIMULATOR.md  MASSIVE_API.md  PLAN.md  REVIEW.md
